Se agrega material UI para estilos y se agrega Link a la pantalla SignUp

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -62,6 +62,10 @@
   color: #000000;
 }
 
+.signButton Link{
+  color: #000000;
+}
+
 .loginButton{
   background-color: #000000;
   color: #ffffff;
