--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,3 +59,106 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+/*Estilo SignUp.jsx*/
+
+.formContainer {
+
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 0 auto;
+  max-width: 600px;
+  
+  
+}
+.formTitle{
+  font-size: 35px;
+  margin: 20px;
+}
+.subTitle{
+  font-size: 22px;
+}
+.formStep {
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+}
+ .formData {
+  background-color: #1e1e1e;
+  height: 400px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+  align-content: center;
+  
+}
+.formGroup {
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+    
+}
+.formLabel {
+  font-size: 13px;
+}
+.formButton {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 68px;
+  align-items: center;
+  
+}
+.stepButton {
+  color: white;
+  font-size: 11px;
+  background-color: #1e1e1e;
+  text-align: center;
+  width: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 28px;
+  border-radius: 12px;
+}
+
+.formInput {
+  box-sizing: border-box;
+  height: 28px;
+  max-width: 220px;
+  padding: 0 14px;
+  color: white;
+  background-color: #757575;
+  width: 240px;
+  border-radius: 25px;
+  font-size: 12px;
+  outline: none;
+  border: none;
+}
+.backButton {
+  background-color: #000000;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+.nextButton {
+  background-color: #00ff09;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+.formReturn{
+  font-weight: 500;
+}
+.toLogin {
+  color: #00ff09;
+}
