--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -80,7 +92,7 @@ button:focus-visible {
   flex-direction: column;
   width: 100%;  
   max-width: 680px;  
-  border: 1px solid red;
+  min-width: 680px;
 }
 
 .formTitle{
@@ -100,7 +112,7 @@ button:focus-visible {
 
  .formData {
   background-color: #1e1e1e;
-  height: 400px;
+  height: 460px;
   border-radius: 15px;
   display: flex;
   flex-direction: row;
@@ -108,10 +120,11 @@ button:focus-visible {
   justify-content: space-evenly;
   width: 100%;
   align-content: center;
+  min-width: 680px;
 }
 
 .formGroup {
-  height: 70px;
+  height: 80px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -119,7 +132,8 @@ button:focus-visible {
 }
 
 .formLabel {
-  font-size: 13px;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .formButton {
@@ -127,7 +141,8 @@ button:focus-visible {
   justify-content: space-around;
   width: 100%;
   height: 68px;
-  align-items: center;
+  align-items: flex-end;
+  align-self: flex-end;
 }
 
 .stepButton {
@@ -135,26 +150,37 @@ button:focus-visible {
   font-size: 12px;
   background-color: #1e1e1e;
   text-align: center;
-  width: 180px;
+  width: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 28px;
+  height: 32px;
   border-radius: 12px;
+  border: none;
+  outline: none;
+}
+
+.stepButton:focus{
+  outline: none;
+  border: none;
 }
 
 .formInput {
   box-sizing: border-box;
-  height: 28px;
-  max-width: 220px;
+  height: 38px;
+  max-width: 260px;
   padding: 0 14px;
   color: white;
   background-color: #757575;
-  width: 240px;
+  width: 260px;
   border-radius: 25px;
   font-size: 12px;
   outline: none;
   border: none;
+}
+
+.formInput::placeholder {
+  color: #bbbbbb;
 }
 
 .backButton {
