--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,7 +78,7 @@ button:focus-visible {
   height: 100%;
 }
 
-.mainContainer{
+.mainContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,17 +90,17 @@ button:focus-visible {
 .formContainer {
   display: flex;
   flex-direction: column;
-  width: 100%;  
-  max-width: 680px;  
-  min-width: 680px;
+  width: 100%;
+  max-width: 700px;
+  min-width: 700px;
 }
 
-.formTitle{
+.formTitle {
   font-size: 35px;
   margin: 20px;
 }
 
-.subTitle{
+.subTitle {
   font-size: 22px;
 }
 
@@ -110,17 +110,18 @@ button:focus-visible {
   height: 60px;
 }
 
- .formData {
+.formData {
   background-color: #1e1e1e;
-  height: 460px;
+  min-height: 380px;
+  padding: 40px 0;
   border-radius: 15px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
   width: 100%;
-  align-content: center;
-  min-width: 680px;
+  align-content: flex-start;
+  min-width: 700px;
 }
 
 .formGroup {
@@ -166,7 +167,7 @@ button:focus-visible {
 }
 
 
-.stepButton:focus{
+.stepButton:focus {
   outline: none;
   border: none;
 }
@@ -206,7 +207,7 @@ button:focus-visible {
   border-radius: 3px;
 }
 
-.formReturn{
+.formReturn {
   font-weight: 500;
 }
 
@@ -214,59 +215,87 @@ button:focus-visible {
   color: #00ff09;
 }
 
+.planContainer {
+  display: flex;
+  flex-direction: column;
+  justify-self: flex-start;
+  align-self: flex-start;
+  height: 320px;
+  width: 100%;
+  padding: 0 48px;
+}
+
+.subTitlePlan {
+  font-size: 22px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 20px;
+  align-self: start;
+}
+
 .planCardsContainer {
   display: flex;
-  flex-direction: column; /* Apila las cards verticalmente */
-  gap: 15px; /* Espacio entre las cards */
-  margin-top: 20px;
+  width: 100%;
+  height: 200px;
+  justify-content: space-between;
 }
 
 /* Estilo base de cada card */
 .planCard {
-  border: 2px solid #ddd;
-  border-radius: 8px;
-  padding: 20px;
+  padding: 15px 0;
+  box-sizing: border-box;
+  display: flex;
+  width: 190px;
+  height: 155px;
+  font-size: 14px;
   cursor: pointer;
+  border-radius: 14px;
   transition: all 0.2s ease-in-out;
-  background-color: #fff;
+  background-color: #757575;
+  color: #FFFFFF;
+  flex-direction: column;
 }
 
 /* Efecto al pasar el mouse sobre una card no seleccionada */
 .planCard:not(.selected):hover {
   border-color: #aaa;
-  transform: translateY(-3px);
+  transform: translateY(-2px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 }
 
 /* Estilo de la card CUANDO ESTÁ SELECCIONADA */
 .planCard.selected {
-  background-color: #e7f3ff; /* Un fondo azulado muy suave */
-  border-color: #3498db;     /* Borde azul más fuerte */
-  box-shadow: 0 4px 15px rgba(52, 152, 219, 0.2);
-  transform: scale(1.02); /* La hace un poquito más grande */
+  background-color: #464646;
+  /* Un fondo azulado muy suave */
+  border-color: #ffffff;
+  /* Borde azul más fuerte */
+  box-shadow: 0 2px 15px rgba(42, 255, 53, 0.2);
+  transform: scale(1.02);
+  /* La hace un poquito más grande */
 }
 
 /* Estilos para el texto dentro de las cards */
 .planName {
   margin: 0 0 5px 0;
-  color: #333;
 }
 
 .planPrice {
   margin: 0 0 10px 0;
   font-size: 1.5em;
   font-weight: bold;
-  color: #2c3e50;
-}
-
-/* El precio cambia de color en la card seleccionada */
-.planCard.selected .planPrice {
-  color: #3498db;
 }
 
 .planDescription {
   margin: 0;
+  padding: 0 0 0 26px;
   text-align: left;
-  font-size: 0.9em;
-  color: #777;
+  font-size: 0.85em;
+  font-weight: 500;
+}
+
+.passContainer {
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  align-items: center;
 }
