--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -293,7 +293,7 @@ button:focus-visible {
   align-items: center;
 }
 
-.newContainer{
+.newContainer {
   display: flex;
   flex-direction: column;
   justify-self: flex-start;
@@ -303,15 +303,16 @@ button:focus-visible {
   padding: 0 40px;
 }
 
-.newUserContainer{
+.newUserContainer {
   display: flex;
   width: 100%;
-  justify-content: space-between;;
+  justify-content: space-between;
+  ;
   align-items: center;
   height: 100%;
 }
 
-.newUserDetail{
+.newUserDetail {
   margin: 0;
   list-style: none;
   box-sizing: border-box;
@@ -327,18 +328,18 @@ button:focus-visible {
   font-size: 12px;
 }
 
-.subTitleDetail{
+.subTitleDetail {
   margin: 0;
   font-size: 21px;
 }
 
-.newUserDetail strong{
+.newUserDetail strong {
   align-content: start;
   color: #000000;
   font-size: 14px;
 }
 
-.newUserDetail li{
+.newUserDetail li {
   align-content: start;
   padding: 10px 0;
   width: 150px;
@@ -346,7 +347,7 @@ button:focus-visible {
   color: #ffffff;
 }
 
-.planDetail{
+.planDetail {
   list-style: none;
   width: 240px;
   height: 200px;
@@ -354,7 +355,7 @@ button:focus-visible {
   border-radius: 15px;
 }
 
-.planDetail p{
+.planDetail p {
   display: flex;
   justify-content: flex-start;
   padding: 0 20px;
@@ -373,7 +374,7 @@ button:focus-visible {
   justify-content: space-evenly;
   width: 100%;
   align-content: center;
-  
+
 }
 
 .loginGroup {
@@ -382,7 +383,7 @@ button:focus-visible {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
-    
+
 }
 
 .loginLabel {
@@ -398,7 +399,7 @@ button:focus-visible {
   color: white;
   background-color: #757575;
   width: 400px;
-  border-radius: 25px;   
+  border-radius: 25px;
   font-size: 12px;
   outline: none;
   border: none;
@@ -417,4 +418,98 @@ button:focus-visible {
   justify-content: center;
   align-items: center;
   border-radius: 3px;
+}
+
+/* Estilos de Profile */
+.profile-container {
+  max-width: 900px;
+  margin: 50px auto;
+  padding: 0 20px;
+}
+
+.profile-card {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+#avatar {
+  width: 80px;
+  height: 80px;
+  margin: 0 auto;
+  border-radius: 50%;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.profile-info {
+  text-align: left;
+  margin: 20px 0;
+}
+
+.profile-info div {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.btn-info,
+.btn-edit {
+  width: 900px;
+  height: 20xpx;
+  border-radius: 24px;
+  margin-bottom: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.btn-primary {
+  background: 00FF09;
+}
+
+.btn-link {
+  border: none;
+  background: none;
+  text-decoration: underline;
+  color: 757575;
+  font-weight: 200;
+}
+
+.reservas {
+  width: 900px;
+}
+
+.reservas .reserva {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.reserva div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.estado-confirmado {
+  background-color: #00ff00;
+  color: #000;
+  padding: 5px 15px;
+  border-radius: 5px;
+}
+
+.estado-pendiente {
+  background-color: #555;
+  padding: 5px 15px;
+  border-radius: 5px;
+}
+
+.membresia {
+  text-align: center;
+  margin: 50px 0;
 }
