--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,8 +57,21 @@ button {
   transition: border-color 0.25s;
 }
 
+button:disabled:hover{
+  color: #ffffff9d;
+  background-color: rgb(124, 124, 124);
+}
+
 button:hover {
   border-color: #006103;
+}
+
+.inputError{
+  position: absolute;
+  padding-left: 8px;
+  font-size: 12px;
+  color: #ff6161;
+  bottom: -10px;
 }
 
 /* @media (prefers-color-scheme: light) {
@@ -181,9 +194,11 @@ button:hover {
 .formGroup {
   height: 80px;
   display: flex;
+  max-height: 80px;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
+  position: relative;
 }
 
 .formLabel {
@@ -405,6 +420,9 @@ button:hover {
   height: 200px;
   background-color: #757575;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .planDetail p {
