--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -21,6 +21,10 @@
   font-size: 16px;
 }
 
+.logoContainer:active{
+  transform: scale(0.98);
+}
+
 .logoImg {
   width: 40px;
   margin: 0 auto;
@@ -39,6 +43,14 @@
 .navList li {
   cursor: pointer;
   font-weight: 500;
+}
+
+.navList li:hover{
+  color: #00af06de;
+}
+
+.navList li:active{
+  transform: scale(0.95);
 }
 
 .authButtons {
