--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -510,6 +510,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   border-radius: 3px;
+  color: black;
 }
 
 /* Estilos de Profile */
