--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+body {
+  overflow-y: scroll;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -513,6 +517,12 @@ button:hover {
   color: black;
 }
 
+.logeoButton:disabled:hover {
+  background-color: #00ff08;
+  color: black;
+  cursor: wait;
+}
+
 /* Estilos de Profile */
 .profile-page {
   display: flex;
@@ -539,7 +549,7 @@ button:hover {
   padding: 60px 0;
 }
 
-.profile-list-menu li{
+.profile-list-menu li {
   cursor: pointer;
 }
 
