--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -590,6 +590,73 @@ button:hover {
   margin-bottom: 10px;
 }
 
+/* Estilos de Profile Admin */
+.profile-admin-card h2 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 16px;
+}
+
+.side-menu-admin {
+  width: 300px;
+  min-width: 300px;
+}
+
+.profile-admin-info {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 34px;
+}
+.profile-admin-info ul {
+  list-style-type: none;
+  text-align: left;
+  font-size: 1.2rem;
+}
+
+.profile-admin-info ul li {
+  margin: 18px;
+}
+
+.profile-admin-info .info-title ul li{
+  font-weight: 600;
+}
+
+.profile-admin-info .info-text ul li {
+  font-weight: 100;
+}
+
+.profile-user-list {
+  list-style: none;
+  padding: 0;
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
+}
+
+.profile-user-list li {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+  transition: background 0.2s;
+}
+
+.profile-user-list li:hover {
+  background-color: grey;
+}
+
+.profile-user-list li.selected {
+  background-color: grey;
+  font-weight: bold;
+}
+
+.no-user-selected {
+  margin: auto;
+  font-size: 1.2rem;
+  color: gray;
+  text-align: center;
+}
+
+
+/* ----------------- */
+
 .btn-info,
 .btn-edit {
   width: 80%;
