--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,11 +3,10 @@ body {
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffffde;
   background-color: #000000;
 
   font-synthesis: none;
@@ -20,6 +19,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -56,12 +56,9 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   border: none;
   outline: none;
-  color: white;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
 
 button:disabled:hover {
@@ -761,6 +758,7 @@ Estilos de Activities
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  min-width: 400px;
   transition:
     transform 0.2s,
     box-shadow 0.2s;
@@ -770,7 +768,7 @@ Estilos de Activities
 }
 
 .activity-card:hover {
-  transform: translateY(-4px);
+  transform: scale(1.02);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
 }
 
@@ -794,10 +792,9 @@ Estilos de Activities
 
 .card-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 12px 16px 0 16px;
-  margin-bottom: 10px;
+  height: 46px;
 }
 
 .category {
@@ -815,11 +812,10 @@ Estilos de Activities
 .card-title {
   font-size: 1.25rem;
   font-weight: 700;
-  margin: 0 16px 8px 16px;
 }
 
 .card-description {
-  font-size: 0.95rem;
+  font-size: 0.9rem;
   color: #bbb;
   margin: 0 16px 16px 16px;
 }
@@ -834,6 +830,8 @@ Estilos de Activities
 .info-box {
   background: #222;
   padding: 10px 12px;
+  font-size: 13px;
+  font-weight: 400;
   border-radius: 12px;
   flex: 1;
 }
