--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -5,12 +5,14 @@
   width: 100%;
   height: 80px;
   box-sizing: border-box;
+  padding: 0 20px;
+  background-color: #181818;
+  border-radius: 14px 14px 0 0;
 }
 
 .logoContainer {
   margin: 0;
   display: flex;
-  margin-left: 60px;
   min-width: 300px;
 }
 
@@ -56,14 +58,12 @@
 .authButtons {
   display: flex;
   min-width: 300px;
-  margin-right: 60px;
   justify-content: end;
   gap: 25px;
 }
 
 .authButtons {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -75,8 +75,8 @@
   align-items: center;
   height: 46px;
   width: 102px;
-  border: 1px solid white;
-  border-radius: 3px;
+  border: 1px solid #cecece;
+  border-radius: 6px;
   font-size: 1em;
   font-weight: 500;
 }
