--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,8 @@
-body {
-  overflow-y: scroll;
-}
-
 :root {
   font-weight: 400;
-
   color-scheme: light dark;
   color: #ffffffde;
-  background-color: #151616;
+  background-color: #070707;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -39,12 +34,17 @@ a {
   color: inherit;
 }
 
-body {
-  box-sizing: border-box;
+html,
+body,
+#root {
+  height: 100%;
   margin: 0;
-  display: flex;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   min-width: 320px;
-  min-height: 100vh;
 }
 
 button {
@@ -53,6 +53,7 @@ button {
   width: 102px;
   display: flex;
   font-size: 1em;
+  border-radius: 6px;
   font-weight: 500;
   font-family: inherit;
   border: none;
@@ -158,28 +159,32 @@ button:hover {
 }
 
 /* ======================= */
-
-.appContainer {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
 .mainContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: start;
+  padding: 0 20px;
+  flex-direction: column;
+  text-align: center;
   flex-grow: 1;
+  overflow-y: auto;
+  box-sizing: border-box;
+}
+
+.footerContainer {
+  display: flex;
+  justify-content: center;
+  min-height: 100px;
+  background-color: #181818;
+  border-radius: 0px 0px 14px 14px;
+  box-sizing: border-box;
 }
 
 /*Estilo SignUp.jsx*/
 .formContainer {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  max-width: 700px;
-  min-width: 700px;
+  width: 780px;
+  padding: 20px;
 }
 
 .formTitle {
@@ -198,19 +203,23 @@ button:hover {
   margin: 14px 0;
 }
 
-.formData {
-  background-color: #1e1e1e;
-  min-height: 380px;
-  padding: 40px 0;
+.formContent {
+  display: flex;
+  flex-direction: column;
+  background-color: #1a1a1a;
+  min-height: 468px;
   border-radius: 15px;
+  padding: 40px;
+  justify-content: space-between;
+}
+
+.formData {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
   width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-content: flex-start;
-  min-width: 700px;
-  margin-bottom: 20px;
 }
 
 .formGroup {
@@ -220,11 +229,10 @@ button:hover {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
-  position: relative;
 }
 
 .formLabel {
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
 }
 
@@ -242,7 +250,7 @@ button:hover {
   font-size: 12px;
   background-color: #1e1e1e;
   text-align: center;
-  width: 200px;
+  width: 175px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -269,8 +277,8 @@ button:hover {
   padding: 0 14px;
   color: white;
   background-color: #757575;
-  width: 260px;
-  border-radius: 25px;
+  width: 280px;
+  border-radius: 6px;
   font-size: 12px;
   outline: none;
   border: none;
@@ -312,7 +320,6 @@ button:hover {
   align-self: flex-start;
   height: 320px;
   width: 100%;
-  padding: 0 48px;
 }
 
 .subTitlePlan {
@@ -326,7 +333,6 @@ button:hover {
 .planCardsContainer {
   display: flex;
   width: 100%;
-  height: 200px;
   justify-content: space-between;
 }
 
@@ -389,8 +395,7 @@ button:hover {
   justify-self: flex-start;
   align-self: flex-start;
   height: 320px;
-  width: 100%;
-  padding: 0 40px;
+  width: 100%
 }
 
 .newUserContainer {
@@ -563,7 +568,7 @@ button:hover {
 
 .profile-container {
   width: 100%;
-  
+
   display: flex;
   flex-direction: column;
 }
@@ -627,6 +632,7 @@ button:hover {
   justify-content: space-evenly;
   margin: 34px;
 }
+
 .profile-admin-info ul {
   list-style-type: none;
   text-align: left;
@@ -637,7 +643,7 @@ button:hover {
   margin: 18px;
 }
 
-.profile-admin-info .info-title ul li{
+.profile-admin-info .info-title ul li {
   font-weight: 600;
 }
 
@@ -752,13 +758,11 @@ button:hover {
 Estilos de Activities
 ============================*/
 .activities-container {
+  display: flex;
   color: #fff;
   padding: 40px 0px;
   width: 100%;
   min-width: 1300px;
-  min-height: 100vh;
-  font-family: "Inter", sans-serif;
-  display: flex;
 }
 
 .activities-container button {
@@ -766,7 +770,7 @@ Estilos de Activities
   align-items: center;
 }
 
-.activities-main{
+.activities-main {
   width: 76%;
   display: flex;
   flex-direction: column;
@@ -985,7 +989,7 @@ Estilos de Activities
   margin: 22px;
 }
 
-.user-activities .activity-card{
+.user-activities .activity-card {
   background-color: #1e1e1e;
   border: 1px solid #333;
   margin: 0;
@@ -1000,12 +1004,12 @@ Estilos de Activities
   font-size: 1.2rem;
 }
 
-.buttonCancel{
+.buttonCancel {
   display: flex;
   justify-content: flex-end;
 }
 
-.cancelActivity{
+.cancelActivity {
   height: 25px;
   font-size: 14px;
   border-radius: 4px;
@@ -1014,7 +1018,7 @@ Estilos de Activities
   align-items: center;
 }
 
-.cont-act-card{
+.cont-act-card {
   display: flex;
   flex-direction: column;
   gap: 20px;
