--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -162,7 +162,6 @@ button:hover {
 .mainContainer {
   display: flex;
   align-items: center;
-  padding: 0 20px;
   flex-direction: column;
   text-align: center;
   flex-grow: 1;
@@ -759,8 +758,6 @@ Estilos de Activities
 ============================*/
 .activities-container {
   display: flex;
-  color: #fff;
-  padding: 40px 0px;
   width: 100%;
   min-width: 1300px;
 }
@@ -771,14 +768,18 @@ Estilos de Activities
 }
 
 .activities-main {
-  width: 76%;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .activities-aside {
-  min-height: 100vh;
-  min-width: 240px;
+  height: 100%;
+  min-width: 200px;
+  padding: 20px;
+  background-color: #181818;
 }
 
 .activities-title {
