--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -110,21 +110,41 @@ button:hover {
   color: #00ff09;
 }
 
+.home-content {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+}
+
 .home-section .home-content p {
-  font-size: px;
   text-align: left;
   font-weight: 400;
+  line-height: 1.4;
+}
+
+.home-p{
+  display: flex;
+  flex-direction: column;
+  height: 80px;
+  justify-content: center;
+}
+
+.home-content h2 {
+  line-height: 1.1;
+  text-align: left;
+  margin-left: -2px;
 }
 
 .home-buttons,
 .btn-primary,
 .btn-outline {
-  width: 40%;
+  width: 340px;
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem;
   font-weight: 500;
-  padding: 10px;
 }
 
 .btn-primary,
@@ -815,7 +835,7 @@ Estilos de Activities
   padding: 0 10px;
 }
 
-.activities-filter span{
+.activities-filter span {
   border-bottom: 1px solid white;
   height: 30px;
 }
@@ -824,7 +844,7 @@ Estilos de Activities
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 1400px;  
+  width: 1400px;
   justify-content: center;
   gap: 40px;
 }
@@ -1054,7 +1074,7 @@ Estilos de Activities
   width: 30px;
 }
 
-.filter-container{
+.filter-container {
   position: relative;
 }
 
