--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -125,7 +125,7 @@ button:hover {
   line-height: 1.4;
 }
 
-.home-p{
+.home-p {
   display: flex;
   flex-direction: column;
   height: 80px;
@@ -556,6 +556,43 @@ button:hover {
   gap: 20px;
 }
 
+.admin-container {
+  width: 100%;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.side-menu-title {
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1e1e1e;
+  border-bottom: 1px solid white;
+
+}
+
+.profile-page-admin {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  width: 1200px;
+}
+
+.admin-title {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  border-bottom: 1px solid white;
+  padding-bottom: 40px;
+}
+
 .side-menu {
   list-style: none;
   margin: 0;
@@ -569,14 +606,18 @@ button:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  padding: 20px 0;
+  align-items: center;
+  height: 40px;
+  background-color: #1e1e1e;
 }
 
 .profile-list-menu li {
   cursor: pointer;
   padding: 6px;
+  gap: 10px;
   border-radius: 8px;
-  width: 280px;
+  width: 180px;
+  font-weight: 600;
 }
 
 .profile-list-menu li.active {
@@ -634,29 +675,50 @@ button:hover {
 /* Estilos de Profile Admin */
 .profile-admin-card h2 {
   text-align: center;
-  font-size: 1.5rem;
-  margin: 16px;
+  font-size: 1.4rem;
+  margin: 14px;
+}
+
+.profile-admin-card {
+  background-color: #1e1e1e;
+  padding: 40px;
+  height: 640px;
+  max-height: 640px;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.icon-edit{
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  width: 24px;
 }
 
 .side-menu-admin {
-  width: 300px;
-  min-width: 300px;
+  width: 280px;
+  background-color: #222;
+}
+
+.menu-admin {
+  display: flex;
+  flex-direction: column;
+  width: 800px;
 }
 
 .profile-admin-info {
   display: flex;
   justify-content: space-evenly;
-  margin: 34px;
 }
 
 .profile-admin-info ul {
   list-style-type: none;
   text-align: left;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .profile-admin-info ul li {
-  margin: 18px;
+  margin: 15px;
 }
 
 .profile-admin-info .info-title ul li {
@@ -671,11 +733,15 @@ button:hover {
   list-style: none;
   padding: 0;
   font-size: 0.9rem;
-  margin-bottom: 1rem;
+  overflow-y: auto;
+  height: 640px;
+  max-height: 640px;
 }
 
 .profile-user-list li {
-  padding: 8px;
+  padding: 10px 20px;
+  width: 100%;
+  display: flex;
   border-bottom: 1px solid #333;
   transition: background 0.2s;
 }
@@ -812,7 +878,7 @@ Estilos de Activities
 .activities-subtitle {
   font-size: 1.1rem;
   color: #aaa;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .activities-content {
