--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,42 +3,15 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  
   box-sizing: border-box;
 }
 
 .appContainer {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   border-radius: 14px;
   background-color: #111111;
   box-sizing: border-box;
-  height: 100%;
   box-shadow: 0px 0px 4px 0px #ffffff56;
-}
-
-.mainContainer::-webkit-scrollbar {
-  width: 10px;
-  border-radius: 10px;
-}
-
-.mainContainer::-webkit-scrollbar-track {
-  background: #1e1e1e;
-  border-radius: 10px;
-  margin: 4px;
-}
-
-.mainContainer::-webkit-scrollbar-thumb {
-  background-color: #292929;
-  border-radius: 10px;
-  border: 2px solid #1e1e1e;
-}
-
-.mainContainer::-webkit-scrollbar-thumb:hover {
-  background-color: #292929;
-}
-
-.mainContainer {
-  scrollbar-width: 14px;
-  scrollbar-color: #181818 #222;
 }
