--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,6 +1,8 @@
 .navbar {
   display: flex;
   align-items: center;
+  position: fixed;
+  z-index: 999;
   min-width: 100vh;
   width: 100%;
   height: 80px;
