--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -97,20 +97,13 @@ button:hover {
   }
 } */
 
-/* ======================= */
-.mainContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  flex-grow: 1;
-}
-
 /* Home */
 .home-section {
   display: flex;
-  height: 100vh;
+  height: 100%;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
@@ -191,6 +184,26 @@ button:hover {
 .btn-primary:active,
 .btn-outline:active {
   transform: scale(0.95);
+}
+
+/* ======================= */
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  box-sizing: border-box;
+  margin-top: 80px;
+  text-align: center;
+}
+
+.footerContainer {
+  display: flex;
+  justify-content: center;
+  min-height: 80px;
+  width: 100%;
+  background-color: #181818;
+  border-radius: 0px 0px 14px 14px;
+  box-sizing: border-box;
 }
 
 /*Estilo SignUp.jsx*/
@@ -836,6 +849,7 @@ Estilos de Activities
 .activities-container {
   display: flex;
   width: 100%;
+  height: 100%;
   min-width: 1300px;
 }
 
@@ -848,6 +862,7 @@ Estilos de Activities
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   padding: 40px 20px;
   box-sizing: border-box;
 }
@@ -904,6 +919,7 @@ Estilos de Activities
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  height: 100%;
   width: 1400px;
   justify-content: center;
   gap: 40px;
